--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 				--gray-container: #e8e8ec;
 				--items-bg: #f1f3fb;
 				--items-brand-tag: #ffb6b1;
-				--items-progress: #00d959;
+				--items-green: #00d959;
 				--items-progress-bg: #e2e2e2;
 				--border-light: #d2d2d7;
 			}
